--- a/ui/src/components/card/QCard.styl
+++ b/ui/src/components/card/QCard.styl
@@ -40,6 +40,7 @@
 
   &__actions
     padding 8px
+    align-items center
 
     .q-btn__wrapper
       padding 0 8px
@@ -50,6 +51,9 @@
       > .q-btn-item + .q-btn-group
         margin-left 8px
     &--vert
+      > .q-btn-item
+        width auto
+
       > .q-btn-item + .q-btn-item
       > .q-btn-group + .q-btn-item
       > .q-btn-item + .q-btn-group
